--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/batchp
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -7,7 +6,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.batch.jdbc.initialize-schema=ALWAYS
+#spring.batch.jdbc.initialize-schema=ALWAYS
 
 #disabled job run at startup
-spring.batch.job.enabled=false
+#spring.batch.job.enabled=false
+
+#selecting specific job to run at start up
+spring.batch.job.names=parentJob
