--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.batch.job.enabled=false
 
 #selecting specific job to run at start up
-#spring.batch.job.names=parentJob
+spring.batch.job.names=job2
 
