Revert "Output - Writing to Multiple Files"
This reverts commit 9f8ca6d3fc3d95dd7563b114483129b1613841af.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.batch.job.enabled=false
 
 #selecting specific job to run at start up
-#spring.batch.job.names=job2
+spring.batch.job.names=job2
 
